manifests/approval-processing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: approval-processing-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: approval-processing-service
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: grpc
