manifests/approval-request-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: approval-request-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: approval-request-service
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
    name: http
  - port: 9091
    targetPort: 9091
    protocol: TCP
    name: grpc
