manifests/employee-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: employee-service
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
