manifests/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
  - port: 8084
    targetPort: 8084
    protocol: TCP
    name: http
